@@ -278,6 +278,10 @@ https://github.com/networkupstools/nut/milestone/8
    would not fully benefit the drivers on systems managed by real-time
    `nut-driver-enumerator` (it needs to be taught to play well) [#1903]
 
+ - Drivers should now accept `SIGUSR1` to dump their current state information
+   (to `stdout` of the driver process, may be disconnected when background
+   mode is used) and move on -- this can help with troubleshooting [#1907]
+
  - Recipes and `main.c` code were enhanced to produce a `libdummy_mockdrv.la`
    helper library during build (not intended to be installed nor distributed),
    in order to facilitate creation of test programs which behave like a driver
